fixed cards for search and horizontal scroll

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -137,7 +137,7 @@ hr {
  height: 70vh;
 }
 .login-card-block {
- padding-top: 50px;
+ padding-top: 80px;
 }
 
 #completed-trips {
